[package]
name = "runecho"
version = "0.1.0"
authors = ["Mikhail Ivanov <m.ivanych@gmail.com>"]
description = "Выполняет команду, предварительно показав её в интерполированном виде."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
