[package]
name = "runecho"
version = "0.2.1"
authors = ["Mikhail Ivanov <m.ivanych@gmail.com>"]
description = "Выполняет команду, предварительно показав её в интерполированном виде."
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
clap = "2.33.3"
